--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title Famcom Labs</title>
+<title>Page Title Famcom Labs Private Limited</title>
 </head>
 <body>
 
